workspaces/diff-engine/tests/snapshots/e2e_scenarios__scenario_19__results.snap
---
source: workspaces/diff-engine/tests/e2e-scenarios.rs
expression: results
---
[
    UnmatchedResponseBodyShape(
        UnmatchedResponseBodyShape {
            interaction_trail: InteractionTrail {
                path: [
                    ResponseBody {
                        content_type: "application/json",
                        status_code: 200,
                    },
                ],
            },
            requests_trail: SpecResponseBody(
                SpecResponseBody {
                    response_id: "response_1",
                },
            ),
            shape_diff_result: UnmatchedShape {
                json_trail: JsonTrail {
                    path: [],
                },
                shape_trail: ShapeTrail {
                    root_shape_id: "shape_3",
                    path: [],
                },
            },
        },
    ),
]
