workspaces/diff-engine/tests/snapshots/e2e_scenarios__scenario_19__shape_choice_mapping.snap
---
source: workspaces/diff-engine/tests/e2e-scenarios.rs
expression: "&spec_projection.shape().to_choice_mapping()"
---
{
  "shape_2": [],
  "shape_3": [
    {
      "type": "Array",
      "jsonType": "Array",
      "shapeId": "shape_3",
      "itemShapeId": "shape_2"
    }
  ],
  "shape_4": [
    {
      "type": "Object",
      "jsonType": "Object",
      "fields": []
    }
  ]
}
